--- a/index.html
+++ b/index.html
@@ -1259,8 +1259,8 @@
         <!--end of section 9-->
         <!--10 section-->
         <section id="get-token" class="get-token">
-            <link rel="stylesheet" href="/css/style.css">
-            <link href="/js/main.js">
+            <link rel="stylesheet" href="/css/token.css">
+            <link href="/js/timer.js">
             <div class="crp-token">
                 <div class="crp-title">
                     <div class="yellowline"></div>
